# swamp-thing

./: README.rst  ingest_documents.py  packages.json  pyproject.toml  st  test_query.py
config/: domain_config.yaml  global_config.yaml
config/setup/: rag_user.sh  rag_user.sql  setup_db.sh
config/src/agents/: main_agent.py
src/agents/: main_agent.py  metadata_tool.py  reranker_agent.py  semantic_retriever_agent.py
src/ingest/: ingest_documents.py
src/rag_llm_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: test_components.py  test_query.py
xyx/examples/: simple_rag.py
