[project]
name = "rag-llm-project"
version = "0.1.0"
description = "Large-scale RAG system for documents"
authors = [{name = "Forest Mars", email = "mars@mlops.nyc"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

# ALL DEPENDENCIES
dependencies = [
    # CORE FRAMEWORK & RAG
    "llama-index",
    "llama-index-llms-anthropic",
    "llama-index-embeddings-huggingface",
    "python-dotenv",
    # DATA PROCESSING & SCALABILITY
    "pyspark",
    "tika",
    # DATABASE CONNECTORS
    "psycopg2-binary",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.1",
    "pyyaml>=6.0.3",
    "llama-index-vector-stores-postgres>=0.7.1",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-ollama>=0.9.0",
    "scikit-learn>=1.7.2",
]

# Optional dependencies (commented out)
# [project.optional-dependencies]
# agentic = ["fastembed", "sentence-transformers", "cohere-rerank"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

